2006-12-30  Rob Buis  <buis@kde.org>

        Reviewed by Eric.

        Adapted testcase for:
        http://bugs.webkit.org/show_bug.cgi?id=12004
        Webkit doesnt handle omitting M at the start of path syntax well

        * svg/custom/path-bad-data-expected.checksum:
        * svg/custom/path-bad-data-expected.png:
        * svg/custom/path-bad-data-expected.txt:
        * svg/custom/path-bad-data.svg:

2006-12-30  Rémi Zara  <remi_zara@mac.com>

        Reviewed by Darin.

        Updated tests results for http://bugs.webkit.org/show_bug.cgi?id=12001

        * svg/W3C-SVG-1.1/painting-marker-03-f-expected.checksum:
        * svg/W3C-SVG-1.1/painting-marker-03-f-expected.png:
        * svg/W3C-SVG-1.1/painting-marker-03-f-expected.txt:

2006-12-30  Rob Buis  <buis@kde.org>

        Reviewed by weinig.

        Testcase for:
        http://bugs.webkit.org/show_bug.cgi?id=12034
        Adapt preserveAspectRatio parsing to SVGParserUtilities

        * svg/custom/preserve-aspect-ratio-syntax-expected.checksum: Added.
        * svg/custom/preserve-aspect-ratio-syntax-expected.png: Added.
        * svg/custom/preserve-aspect-ratio-syntax-expected.txt: Added.
        * svg/custom/preserve-aspect-ratio-syntax.svg: Added.

2006-12-30  Alexey Proskuryakov  <ap@webkit.org>

        Reviewed by Mitz.

        Test for http://bugs.webkit.org/show_bug.cgi?id=11998
        Incorrect serialization of quotation marks in XML attributes.

        * fast/dom/serialize-attribute-expected.txt: Added.
        * fast/dom/serialize-attribute.xhtml: Added.

2006-12-29  Rob Buis  <buis@kde.org>

        Reviewed by Eric.

        Testcase for:
        http://bugs.webkit.org/show_bug.cgi?id=12007
        SVGColor::setRGBColor color creates/deletes many strings, slowing down parsing

        * svg/custom/rgbcolor-syntax-expected.checksum: Added.
        * svg/custom/rgbcolor-syntax-expected.png: Added.
        * svg/custom/rgbcolor-syntax-expected.txt: Added.