@@ -1,0 +1,23 @@
+layer at (0,0) size 800x600
+  RenderView at (0,0) size 800x600
+layer at (0,0) size 800x600
+  RenderBlock {HTML} at (0,0) size 800x600
+    RenderBody {BODY} at (8,8) size 784x584
+      RenderBlock {DIV} at (0,0) size 130x15
+      RenderBlock {DIV} at (0,15) size 130x15
+      RenderBlock {DIV} at (30,30) size 130x15
+      RenderBlock {DIV} at (-30,45) size 130x15
+      RenderBlock {DIV} at (0,60) size 130x15
+      RenderBlock {DIV} at (0,75) size 130x15
+layer at (28,8) size 90x15
+  RenderBlock (relative positioned) {DIV} at (0,0) size 90x15 [bgcolor=#008000]
+layer at (28,23) size 90x15
+  RenderBlock (relative positioned) {DIV} at (0,0) size 90x15 [bgcolor=#008000]
+layer at (28,38) size 90x15
+  RenderBlock (relative positioned) {DIV} at (0,0) size 90x15 [bgcolor=#008000]
+layer at (28,53) size 90x15
+  RenderBlock (relative positioned) {DIV} at (40,0) size 90x15 [bgcolor=#008000]
+layer at (28,68) size 90x15
+  RenderBlock (relative positioned) {DIV} at (40,0) size 90x15 [bgcolor=#008000]
+layer at (28,83) size 90x15
+  RenderBlock (relative positioned) {DIV} at (40,0) size 90x15 [bgcolor=#008000]
