@@ -1,0 +1,31 @@
+<html>
+<head>
+    <title>Test for http://bugs.webkit.org/show_bug.cgi?id=12037</title>
+    <style type="text/css">
+        .ltr { direction: ltr; }
+        .rtl { direction: rtl; }
+        .container { width: 130px; }
+        .greenbox { background: green; width: 90px; height: 15px; }
+    </style>
+</head>
+<body>
+    <div class="container ltr">
+        <div class="greenbox" style="position: relative; left: 20px; right: 10px;"></div>
+    </div>
+    <div class="container ltr">
+        <div class="greenbox" style="position: relative; left: 20px;"></div>
+    </div>
+    <div class="container ltr" style="margin-left: 30px;">
+        <div class="greenbox" style="position: relative; right: 10px;"></div>
+    </div>
+    <div class="container rtl" style="margin-left: -30px;">
+        <div class="greenbox" style="position: relative; left: 10px;"></div>
+    </div>
+    <div class="container rtl">
+        <div class="greenbox" style="position: relative; right: 20px;"></div>
+    </div>
+    <div class="container rtl">
+        <div class="greenbox" style="position: relative; right: 20px; left: 10px;"></div>
+    </div>
+</body>
+</html>
